# controllers/paciente.js
@@ -1,4 +1,3 @@
-/* eslint-disable semi */
 "use strict";
 
 const debug = require('debug')("restful:controllers:paciente");
@@ -9,9 +8,16 @@ function Paciente(main) {
 	return {
     'insert': (req, res, next)=> {
 			debug(".paciente.insert called");
-
-      let parametros = req.swagger.params.datos ? req.swagger.params.datos.value : null;
-
+      
+      let parametros = {
+        dni: req.swagger.params.dni ? req.swagger.params.dni.value : null,
+        nombre: req.swagger.params.nombre ? req.swagger.params.nombre.value : null,
+        apellido: req.swagger.params.apellido ? req.swagger.params.apellido.value : null,
+        domicilio: req.swagger.params.domicilio ? req.swagger.params.domicilio.value : null,
+        telefono: req.swagger.params.telefono ? req.swagger.params.telefono.value : null,
+        fotoPerfil: req.swagger.params.fotoPerfil ? req.swagger.params.fotoPerfil.value : null
+      }
+      
       main.libs.paciente.insert(parametros)
 								.then(paciente => {
 									res.json(paciente);
